# storage-device-managers

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml  python-publish.yml  release-please.yml
dockerfiles/: arch  debian  python3.10  python3.11  python3.12  python3.8  python3.9
src/butter_backup/: device_managers.py
src/storage_device_managers/: __init__.py  storage_device_managers.py
tests/: conftest.py  test_chown.py  test_device_manager.py  test_get_filesystem.py  test_mkfs.py  test_mount_ext4.py  test_mount_unmount.py
