[project]
name = "storage-device-managers"
version = "0.15.0"
description = "Helpful context managers for managing decryption and mounts of storage devices"
authors = [ {name = "Max Görner", email = "5477952+MaxG87@users.noreply.github.com" } ]
repository = "https://github.com/MaxG87/storage-device-managers"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "loguru (>=0.7.3)",
    "shell-interface (>=0.14.0)",
]
requires-python = ">=3.9"


[project.optional-dependencies]
logging = ["loguru"]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "hypothesis>=6.125.3",
    "mypy>=1.15.0",
    "pdbpp>=0.10.3",
    "pynvim>=0.5.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
]

[tool.mypy]
allow_any_unimported = false
warn_unreachable = true
enable_error_code = [
    "possibly-undefined"
]
strict = true


[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true
disable_error_code = [
    "possibly-undefined"
]

[tool.pytest.ini_options]
addopts = [
    "--cov", "src",
    "--cov-branch",
    "--cov-fail-under", "85"
]
testpaths = ["tests"]

[tool.ruff]
src = [".", "src/"]

[tool.ruff.lint]
select = ["A", "B", "C", "F", "I", "ISC", "PIE", "PL", "Q", "RUF", "SIM", "TID", "W", "YTT"]
ignore = ["E", "SIM117"]
mccabe.max-complexity = 6

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
